--- a/views/center/monthlyProgress/monthlyProgress.ejs
+++ b/views/center/monthlyProgress/monthlyProgress.ejs
@@ -15,20 +15,20 @@
                                 <h1 class="text-center"><%= title %></h1>
                             </div>
                             <div class="col-md-2">
-                                <label for="startDate">Date :</label>
-                                <input name="startDate" id="startDate" class="date-picker" />
+<!--                                <label for="startDate">Date :</label>-->
+<!--                                <input name="startDate" id="startDate" class="date-picker" />-->
 
-                                <label for="year">Choose a year:</label>
-                                <select id="year" name="year">
-                                    <option value="">Choose year</option>
-                                    <option value="2017">2017</option>
-                                    <option value="2018">2018</option>
-                                    <option value="2019">2019</option>
-                                    <option value="2020" selected>2020</option>
-                                    <option value="2021">2021</option>
-                                    <option value="2022">2022</option>
-                                    <option value="2023">2023</option>
-                                </select>
+<!--                                <label for="year">Choose a year:</label>-->
+<!--                                <select id="year" name="year">-->
+<!--                                    <option value="">Choose year</option>-->
+<!--                                    <option value="2017">2017</option>-->
+<!--                                    <option value="2018">2018</option>-->
+<!--                                    <option value="2019">2019</option>-->
+<!--                                    <option value="2020" selected>2020</option>-->
+<!--                                    <option value="2021">2021</option>-->
+<!--                                    <option value="2022">2022</option>-->
+<!--                                    <option value="2023">2023</option>-->
+<!--                                </select>-->
                             </div>
                         </div>
                         <div class="row mb-2">
