--- a/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -103,6 +103,9 @@
                                             <select name="category" id="category" class="form-control">
                                                 <option value="">Choose Category</option>
                                                 <% categoryList.forEach(function(row){ %>
+                                                    <% if(row.name === monthProgress.category) { %>
+                                                        <option value=<%= row.id %> selected ><%= row.name %></option>
+                                                    <% }%>
                                                     <% if (row.parent_id === null) {%>
                                                         <option value=<%= row.id %>><%= row.name %></option>
                                                     <% } %>
@@ -115,6 +118,11 @@
                                             <!--                                            <input type="text" class="form-control" name="subCategory" placeholder="সাব-ক্যাটাগরি নাম">-->
                                             <select name="subCategory" id="subCategory" class="form-control">
                                                 <option value="" selected="true" disabled="true">Choose সাব-ক্যাটাগরি</option>
+                                                <% categoryList.forEach(function(row){ %>
+                                                    <% if(row.name === monthProgress.subCategory) { %>
+                                                        <option value=<%= row.id %> selected ><%= row.name %></option>
+                                                    <% }%>
+                                                <% }) %>
                                             </select>
                                         </div>
                                         <div class="col">
@@ -122,6 +130,11 @@
                                             <!--                                            <input type="text" class="form-control" name="biboron" placeholder="বিবরণ">-->
                                             <select name="biboron" id="biboron" class="form-control">
                                                 <option value="">Choose Biboron</option>
+                                                <% categoryList.forEach(function(row){ %>
+                                                    <% if(row.name === monthProgress.biboron) { %>
+                                                        <option value=<%= row.id %> selected ><%= row.name %></option>
+                                                    <% }%>
+                                                <% }) %>
                                             </select>
                                         </div>
                                         <div class="col">
@@ -129,6 +142,11 @@
                                             <!--                                            <input type="text" class="form-control" name="breed" placeholder="জাত">-->
                                             <select name="breed" id="breed" class="form-control">
                                                 <option value="">Choose Breed</option>
+                                                <% categoryList.forEach(function(row){ %>
+                                                    <% if(row.name === monthProgress.breed) { %>
+                                                        <option value=<%= row.id %> selected ><%= row.name %></option>
+                                                    <% }%>
+                                                <% }) %>
                                             </select>
                                         </div>
                                     </div>
@@ -136,7 +154,7 @@
                                     <div class="form-row mt-3">
                                         <div class="col">
                                             <label for="productionTarget" class="col-md-3 control-label">উৎপাদন (লক্ষ্যমাত্রা)</label>
-                                            <input type="text" class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)" value="<%= monthProgress.productionTarget %>">
+                                            <input type="text" readonly class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)" value="<%= monthProgress.productionTarget %>">
                                         </div>
                                     </div>
 
