--- a/views/center/topSheet/topSheetTable.ejs
+++ b/views/center/topSheet/topSheetTable.ejs
@@ -7,23 +7,52 @@
         <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
         <th>চলতি মাসে উতপাদন(সংখ্যা/প্যাকেট)</th>
         <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
-        <th>পরিবর্তন/মুছুন</th>
     </tr>
     </thead>
     <tbody>
-        <% records.forEach(function(row){ %>
+        <% cropCatg.forEach(function(row,index){ %>
+            <%
+                var totalProductionTarget = 0;
+                var currentProductionSum = 0;
+                var previousMonthProduction = 0;
+                var totalProduction = 0;
+
+                var startRange = "";
+                var endRange = "";
+
+                if (moment().format("M") < 7){
+                    startRange = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
+                    endRange = "jul"+"-"+moment().format('yyyy')
+                }else{
+                    startRange = "jul"+"-"+moment().format('yyyy')
+                    endRange = "jul"+"-"+moment().add(1, "year").format('yyyy')
+                }
+
+                records.forEach((monthProg) => {
+                    if (monthProg.subCategory === row.name){
+                        // total lokkhomatra in this economic year
+                        totalProductionTarget += parseInt(monthProg.productionTarget)
+
+                        //total purbo month porjonto production
+                        const currentProd = JSON.parse(monthProg.productionCurrent)
+                        currentProd.forEach(function(prodCurrent){
+                            if ( prodCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
+                                currentProductionSum += parseInt(prodCurrent.amount)
+                            }
+                            else if ( moment( prodCurrent.time ).isAfter(startRange) &&  moment( prodCurrent.time ).isBefore(endRange) ){
+                                previousMonthProduction += parseInt(prodCurrent.amount)
+                            }
+                        })
+                    }
+
+                })
+            %>
             <tr>
-                <td><%= row.item %></td>
-                <td><%= row.target %></td>
-                <td><%= row.lproduction %></td>
-                <td><%= row.cproduction %></td>
-                <td><%= row.tproduction %></td>
-                
-                
-               
-                <td><a class="btn btn-primary btn-xs" href="/edit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-                    <a class="btn btn-danger btn-xs" href="/delete/<%= row.id %>"><i class="fa fa-trash"></i></a>
-                </td>
+                <td><%= row.name %></td>
+                <td><%= new Number(totalProductionTarget).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(previousMonthProduction).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td>
+                <td><%= new Number(currentProductionSum + previousMonthProduction).toLocaleString("bn-BD") %></td>
             </tr>
         <% }) %>
     </tbody>
