--- a/views/center/monthlyProgress/monthlyProgress.ejs
+++ b/views/center/monthlyProgress/monthlyProgress.ejs
@@ -41,6 +41,7 @@
                         <div class="table-responsive" id="output"></div>
 
                         <input type="button" id="btnExport" value="Download PDF" />
+                        <a href="/center/generatePdfMonthlyProgress" class="btn btn-primary">Download pdf</a>
 
                         <div id="output"></div>
         <!--                    <div id="loading" class="loading"><img src="{{ asset('assets/img/icon/loading.gif') }}" alt=""></div>-->
